--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -119,7 +119,7 @@
         <Button
             android:backgroundTint="@color/btn_reg"
             android:textColor="@color/txtbtn_reg"
-            android:text="Erase"
+            android:text="Periksa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
