--- a/app/src/main/res/layout/konten_inventori.xml
+++ b/app/src/main/res/layout/konten_inventori.xml
@@ -10,7 +10,7 @@
     tools:showIn="@layout/activity_viewinventori">
 
     <Spinner
-        android:id="@+id/spincarimakanan"
+        android:id="@+id/spnCariInventori"
         android:minWidth="80dp"
         android:spinnerMode="dropdown"
         android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -23,12 +23,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/refreshLayout"
+        android:id="@+id/srlRefreshLayout"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:showIn="@layout/activity_viewinventori">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/listmakanan"
+            android:id="@+id/rvDataInventoriList"
             android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:scrollbars="vertical">
